Fix Buttons justification on mobile view

--- a/src/components/buttons/Buttons.css
+++ b/src/components/buttons/Buttons.css
@@ -1,5 +1,4 @@
 #Buttons {
     display: flex;
     gap: 0.5rem;
-    justify-self: flex-end;
 }
