--- a/src/components/nav/Nav.css
+++ b/src/components/nav/Nav.css
@@ -1,7 +1,7 @@
 nav {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: start;
     align-items: center;
     gap: 1rem;
     width: 100%;
